<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff00"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey" >

        <!-- ca-app-pub-3056664527817629/9397572391 -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/adView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:text="@string/textView"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:text="@string/textView2"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/txtGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="6"
            android:hint="@string/txtGuess"
            android:inputType="number"
            android:linksClickable="false"
            android:minHeight="48dp"
            android:textColorHint="#616161" />

        <Button
            android:id="@+id/btnGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtGuess"
            android:layout_centerHorizontal="true"
            android:text="@string/btnGuess" />

        <TextView
            android:id="@+id/lblOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnGuess"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/lblOutput"
            android:textAppearance="@android:style/TextAppearance.Medium" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>